# taproot-common

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/taproot_common/: __init__.py  config.py  errors.py  exceptions.py  http.py  llm_providers.py  logging.py  secrets.py
src/taproot_common/audit/: __init__.py  models.py  publisher.py
src/taproot_common/auth/: __init__.py  cosmos_metadata.py  firestore_metadata.py  metadata.py  middleware.py  models.py  provider.py
tests/: test_auth.py  test_cosmos_metadata.py  test_exceptions.py  test_firestore_metadata.py  test_http.py  test_llm_providers.py
